<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_layout_height"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/app_bar_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/no_image_available"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <TextView
                android:id="@+id/title_in_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"

                android:layout_margin="@dimen/activity_vertical_margin"
                android:background="@drawable/title_gradient_bg"
                android:paddingEnd="@dimen/frame_spacing"
                android:paddingLeft="@dimen/frame_spacing"
                android:paddingRight="@dimen/frame_spacing"
                android:paddingStart="@dimen/frame_spacing"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/gradient_bg"
                app:contentInsetStartWithNavigation="0dp"
                android:paddingEnd="@dimen/margin_8dp"
                android:paddingRight="@dimen/margin_8dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ToolbarStyle"
                tools:context="com.sofialopes.android.popularmoviesapp.activities.DetailActivity">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appbar"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginRight="@dimen/margin_8dp"
            android:layout_marginStart="@dimen/margin_8dp"
            tools:context="com.sofialopes.android.popularmoviesapp.activities.DetailActivity"
            tools:showIn="@layout/activity_detail">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/poster"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:contentDescription="@string/no_image_available"
                app:riv_corner_radius="@dimen/card_corner_radius" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/labels_top_margin"
                android:layout_toEndOf="@id/poster"
                android:layout_toRightOf="@id/poster"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                tools:text="title" />

            <ImageView
                android:id="@+id/release_image"
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"
                android:layout_below="@id/title"
                android:layout_marginLeft="@dimen/special_top_margin_small"
                android:layout_marginStart="@dimen/special_top_margin_small"
                android:layout_marginTop="@dimen/special_top_margin_small"
                android:layout_toEndOf="@id/poster"
                android:layout_toRightOf="@id/poster"
                android:contentDescription="@string/release_date_image_description"
                app:srcCompat="@drawable/ic_date_range_white_24dp" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginLeft="@dimen/release_date_start_margin"
                android:layout_marginStart="@dimen/release_date_start_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/release_image"
                android:layout_toRightOf="@id/release_image"
                android:textSize="@dimen/details_text_size"
                tools:text="release date" />

            <ImageView
                android:id="@+id/rating_image"
                android:layout_width="@dimen/icon_big"
                android:layout_height="@dimen/icon_big"
                android:layout_below="@id/release_date"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/special_top_margin_small"
                android:layout_toEndOf="@id/poster"
                android:layout_toRightOf="@id/poster"
                android:contentDescription="@string/vote_average_image_description"
                app:srcCompat="@drawable/ic_star_rate_white_18dp" />

            <TextView
                android:id="@+id/vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/release_date"
                android:layout_marginLeft="@dimen/release_date_start_margin"
                android:layout_marginStart="@dimen/release_date_start_margin"
                android:layout_marginTop="@dimen/special_top_margin_small"
                android:layout_toEndOf="@id/rating_image"
                android:layout_toRightOf="@id/rating_image"
                android:textColor="@android:color/black"
                android:textSize="@dimen/details_text_size"
                android:textStyle="bold"
                tools:text="release date" />

            <TextView
                android:id="@+id/vote_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/details_text_size"
                android:layout_below="@id/release_date"
                android:layout_marginTop="@dimen/special_top_margin_small"
                android:layout_toEndOf="@id/vote_average"
                android:layout_toRightOf="@id/vote_average"
                android:text="@string/max_rating" />

            <ImageView
                android:id="@+id/runtime_image"
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"
                android:layout_below="@id/rating_image"
                android:layout_marginLeft="@dimen/special_top_margin_small"
                android:layout_marginStart="@dimen/special_top_margin_small"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/poster"
                android:layout_toRightOf="@id/poster"
                android:contentDescription="@string/runtime_image_description"
                app:srcCompat="@drawable/ic_schedule_white_18dp" />

            <TextView
                android:id="@+id/runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rating_image"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/runtime_image"
                android:layout_toRightOf="@id/runtime_image"
                tools:text="runtime" />

            <TextView
                android:id="@+id/overview_label"
                style="@style/DetailsLabel"
                android:layout_width="match_parent"
                android:layout_below="@id/poster"
                android:layout_marginTop="@dimen/labels_top_margin"
                android:text="@string/overview_label" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/overview_label"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:layout_marginLeft="@dimen/margin_8dp"
                android:layout_marginRight="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:lineSpacingExtra="@dimen/overview_extra_line_spacing"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="@dimen/details_text_size"
                tools:text="overview" />

            <TextView
                android:id="@+id/videos_label"
                style="@style/DetailsLabel"
                android:layout_width="match_parent"
                android:layout_below="@id/overview"
                android:layout_marginTop="@dimen/labels_top_margin"
                android:text="@string/videos_label" />

            <LinearLayout
                android:id="@+id/videos_dots_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/videos_label"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/videos_dots_container" />

            <TextView
                android:id="@+id/reviews_label"
                style="@style/DetailsLabel"
                android:layout_width="match_parent"
                android:layout_below="@id/recyclerview_videos"
                android:layout_marginTop="@dimen/labels_top_margin"
                android:text="@string/reviews_label" />

            <LinearLayout
                android:id="@+id/reviews_dots_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reviews_label"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/reviews_dots_container"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_to_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:onClick="onClickAddMovie"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end|right"
        app:layout_collapseMode="parallax"
        app:srcCompat="@drawable/ic_favorite_white_24dp" />
</android.support.design.widget.CoordinatorLayout>